# nonebot-plugin-xjie-weather

./: .flake8  .gitignore  LICENSE  README.md  amap.md  pyproject.toml
.github/workflows/: buld-pypi.yml  lint-and-format.yml
nonebot_plugin_xjie_weather/: __init__.py  config.py  data_utilities.py  db.py  file_handle.py  get_weather.py  html_module.py  main.py  setup.py  weather_img_data.py  xj_requests.py  xjie_data.json  xjie_db.py
nonebot_plugin_xjie_weather/db/: new_city.db
nonebot_plugin_xjie_weather/src/: index.html  output.html
nonebot_plugin_xjie_weather/src/css/: style.css
nonebot_plugin_xjie_weather/src/db/: region.db
nonebot_plugin_xjie_weather/wx_info/: amap.py  qweather.py  visualcrossing.py  vvhan.py
