[tool.poetry]
name = "nonebot-plugin-xjie-weather"
version = "1.1.2"

description = "A 24-point game plugin implemented using NoneBot."
authors = ["AwAjie <139576615+ajdgg@users.noreply.github.com>"]
license = "LICENSE"
readme = "README.md"
homepage = "https://github.com/ajdgg/nonebot-plugin-xjie-weather"
repository = "https://github.com/ajdgg/nonebot-plugin-xjie-weather"
documentation = "https://github.com/ajdgg/nonebot-plugin-xjie-weather"
keywords = ["nonebot", "nonebot2"]


[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.2.0"
Jinja2 = "^3.1.4"
playwright = "^1.44.0"
requests = "^2.31.0"
nonebot-adapter-onebot = { version = "^2.0.0-beta.1", optional = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
